# PhysEngine

./: .clang-format  CMakeCache.txt  CMakeLists.txt  README.md
apps/pybindApp/: CMakeLists.txt  app.h  launchWidget.h  pybinder.cpp
apps/standalone1/: CMakeLists.txt  app.h  mainEntry.cpp
gui/: CMakeLists.txt
gui/utility/: util.h
gui/visuals/: colors.h
pybind/: CMakeLists.txt
simulator/: CMakeLists.txt  Simulator.cpp  Simulator.h
simulator/commands/: CMakeLists.txt  SimulatorCommand.h  SimulatorCommander.h
simulator/dataStructs/: CMakeLists.txt  Vect2.cpp  Vect2.h
simulator/dataStructs/tests/: CMakeLists.txt  Vect2_test.cpp
simulator/effects/: CMakeLists.txt  Effect.h  Effect2.h  EffectAdder.h  EffectTemplated.h
simulator/effects/EffectTypes/: Attractor.h  ConstantAcceleration.h  ConstantForce.h  Drag.h  Drag2.h  ForceField.h  LorentzEffect.h  TimeVaryingForce.h
simulator/effects/tests/: CMakeLists.txt  Effect_test.cpp
simulator/interactions/: CMakeLists.txt  InteractingGroup.cpp  InteractingGroup.h  Interaction.cpp  Interaction.h  InteractionAdder.h  InteractionTemplated.h
simulator/interactions/InteractionTypes/: CoulombInteraction.cpp  CoulombInteraction.h  Gravity.h  SoftCollideInteraction.h  SpringInteraction.cpp  SpringInteraction.h
simulator/movers/: CMakeLists.txt  Mover.cpp  Mover.h  MoverFactory.cpp  MoverFactory.h  RigidMovers.cpp  RigidMovers.h
simulator/movers/tests/: CMakeLists.txt  MoverFactory_test.cpp  Mover_test.cpp  RigidMover_test.cpp
simulator/objects/: CMakeLists.txt  Wall.h
simulator/recording/: CMakeLists.txt  Monitor.cpp  Monitor.h
simulator/tests/: CMakeLists.txt  Simulator_test.cpp
simulator/utility/: CMakeLists.txt  ThreadGuard.h  ThreadPool.h
